@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020150425"
-#define public MagickPackageReleaseDate "snapshot-20150425"
+#define public MagickPackageVersionAddendum ".020150426"
+#define public MagickPackageReleaseDate "snapshot-20150426"
